@@ -27,7 +27,5 @@ CLEANFILES = $(extras_DATA)
 
 SUFFIXES = .cob .$(COB_MODULE_EXT)
 .cob.$(COB_MODULE_EXT):
-	. $(top_builddir)/tests/atconfig && . $(top_builddir)/tests/atlocal \
-		&& cobc -m -Wall -O -o $@ $<
-
-
+	. $(top_builddir)/tests/atconfig && . $(top_builddir)/tests/atlocal extras-$@ \
+		&& $$COBC -m -Wall -O -o $@ $<
